Update and rename PERSONAL INFORMATION.html to personal information.html

--- a/personal information.html
+++ b/personal information.html
@@ -29,7 +29,7 @@ select your hobbies<br>
 <input type="check box" name="hobby" value="travel"> travelling<br>
 <input type="check box" name="hobby" value="reading"> reading<br></p>
 
-GO TO NEXT ONE✓ <a href="CSC 207.html"> click here</a>
+GO TO NEXT ONE✓ <a href="csc 207.html"> click here</a>
 </br>
 </body>
 </html>
