Update my first webpage.html

--- a/my first webpage.html
+++ b/my first webpage.html
@@ -10,7 +10,7 @@
 <p>
 <h1><U><B>HOW TO CREATE A WEBSITE DESIGN</B></U></h1>
 <br>
-for more information <a href="personal information.HTML"> click here</a>
+for more information <a href="personal information.html"> click here</a>
 <a href="#TOP"><b><center> BACK TO UP</center></b></a></br>
 <Marquee><h3> START YOUR JOURNEY....</h3> </b></Marquee>
 </p>
