--- a/table.html
+++ b/table.html
@@ -31,7 +31,7 @@
 <td> Ent 203 </td>
 <td>  Ecp 209</td>
 </tr>
-for further more <a href=" definition list.HTML"> click here</a>
+for further more <a href="definition list.html"> click here</a>
 </table>   
 </body>
 </html>  
